<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddContactActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:background="@color/colorPrimary"
       >


<!--        <ImageView-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginBottom="4dp"-->
<!--            android:src="@drawable/ic_navigate_before_black_24dp"-->
<!--            android:layout_gravity="start"-->
<!--             />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/darkBlueButton"
            android:textSize="32sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/lightBlueFont"
            android:text="@string/how_to_add_contact"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/first_name_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:textAllCaps="false"
            android:textColorHint="@color/darkBlueFont" />

        <EditText
            android:id="@+id/last_name_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/last_name"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/phone_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Phone"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/address_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Address"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Submit"
            android:gravity="center"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="28dp"
            android:background="@color/darkBlueButton"
            android:textColor="@color/colorPrimary"

            />



    </LinearLayout>
</ScrollView>
