<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="AddContactFragmentBinding">

        <variable
            name="contact"
            type="com.example.contactapp.Contact" />
    </data>


<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"

    tools:context=".AddContactActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:background="@color/colorPrimary"
       >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/darkBlueButton"
            android:textSize="32sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/lightBlueFont"
            android:text="@string/how_to_add_contact"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/first_name_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/first_name"
            android:text="@={contact.firstName}"
            android:inputType="textCapWords"
            android:textAllCaps="false"
            android:textColorHint="@color/darkBlueFont" />

        <EditText
            android:id="@+id/last_name_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/last_name"
            android:text="@={contact.lastName}"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email"
            android:text="@={contact.email}"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/phone_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Phone"
            android:text="@={contact.phone}"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/address_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@={contact.address}"
            android:hint="Address"
            android:gravity="start"
            android:textColorHint="@color/darkBlueFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Submit"
            android:gravity="center"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="28dp"
            android:background="@color/darkBlueButton"
            android:textColor="@color/colorPrimary"

            />



    </LinearLayout>
</ScrollView>
</layout>
