<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddContactActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:padding="32dp"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/contact_image"
                android:elevation="10dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="-48dp"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/profile_first_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:textSize="24dp"
                            android:textStyle="bold"
                            android:textColor="@color/blackFontColor"
                            android:text="@string/first_name" />

                        <TextView
                            android:id="@+id/profile_last_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24dp"
                            android:textStyle="bold"
                            android:textColor="@color/blackFontColor"
                            android:text="@string/last_name" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/blackFontColor"
                        android:textSize="16dp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:background="@drawable/circle"
                        android:src="@drawable/message"
                        android:layout_marginRight="24dp"/>
                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:background="@drawable/circle"
                        android:src="@drawable/chat_icon"
                        android:layout_marginRight="24dp"/>
                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:background="@drawable/circle"
                        android:src="@drawable/call_icon"
                        />
                </LinearLayout>



            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginTop="24dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/contactDetailsHeading"
                    android:text="@string/first_name"/>
                <TextView
                    android:id="@+id/profile_body_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/contactDetailsValue"
                    android:textStyle="bold"
                    android:text="Victoria"
                    android:textSize="16dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/contactDetailsHeading"
                    android:text="@string/last_name"/>
                <TextView
                    android:id="@+id/profile_body_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/contactDetailsValue"
                    android:textStyle="bold"
                    android:text="Ahmed"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/contactDetailsHeading"
                    android:text="@string/email"/>
                <TextView
                    android:id="@+id/profile_body_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/contactDetailsValue"
                    android:textStyle="bold"
                    android:text="user email"
                    android:textSize="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_phone_number"
                        android:textColor="@color/contactDetailsHeading"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0983245273"
                        android:textColor="@color/contactDetailsValue"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/contactDetailsHeading"
                    android:text="@string/address"/>
                <TextView
                    android:id="@+id/profile_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/contactDetailsValue"
                    android:textStyle="bold"
                    android:text="99 Meadow City London"
                    android:textSize="16dp"/>

            </LinearLayout>






        </LinearLayout>

    </LinearLayout>

</ScrollView>